--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,9 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# ignoring pychache
+.venv/*
+__pycache__/*
+classes/__pycache__/*
+tests/__pycache__/*
