--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ python-dateutil==2.9.0.post0
 python-libsbml==5.20.4
 pytz==2025.2
 SBMLKinetics==1.1.1
+scipy==1.15.2
 seaborn==0.13.2
 six==1.17.0
 sympy==1.13.3
